--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.13"
-pyside6-essentials = "^6.7.0"
+pyside6 = "^6.7.0"
 
 [tool.poetry.scripts]
 wm2k = "wm2000.main:main"
